--- a/index.html
+++ b/index.html
@@ -27,21 +27,21 @@ window.onload = () => showSection('作品');
 </nav>
 <section id='作品'><h2>作品</h2>
 
-<img src='作品/0859D848-951C-4C71-8061-CE970B3D27C6.png' alt='' />
+<img src='0859D848-951C-4C71-8061-CE970B3D27C6.png' alt='' />
 
-<img src='作品/C3F65532-F14A-4A23-8259-E8857B0C3CD6.png' alt='' />
+<img src='C3F65532-F14A-4A23-8259-E8857B0C3CD6.png' alt='' />
 
-<img src='作品/450A4330-613F-47EB-A01B-406085EEF684.png' alt='' />
+<img src='450A4330-613F-47EB-A01B-406085EEF684.png' alt='' />
 </section>
 <section id='動畫作品'><h2>動畫作品</h2>
 <h3>弓箭動畫</h3>
-<img src='動畫作品/BD1B05F1-5A78-4018-A662-1110862684D5.gif' alt='弓箭動畫' />
+<img src='BD1B05F1-5A78-4018-A662-1110862684D5.gif' alt='弓箭動畫' />
 <h3>老人笑的動畫</h3>
-<img src='動畫作品/253D49FF-22D4-4FAE-BF42-C63726795228.gif' alt='老人笑的動畫' />
+<img src='253D49FF-22D4-4FAE-BF42-C63726795228.gif' alt='老人笑的動畫' />
 </section>
 <section id='好吃的東東'><h2>好吃的東東</h2>
 
-<img src='好吃的東東/F8FB669A-B340-4FA7-9BFE-DD8737AB48AA.gif' alt='' />
+<img src='F8FB669A-B340-4FA7-9BFE-DD8737AB48AA.gif' alt='' />
 </section>
 <section id='好用的東東'><h2>好用的東東</h2>
 
@@ -49,8 +49,8 @@ window.onload = () => showSection('作品');
 </section>
 <section id='關於我'><h2>關於我</h2>
 
-<img src='關於我/BB2467CF-0FC3-488C-A680-235DD0BCB443.png' alt='' />
+<img src='BB2467CF-0FC3-488C-A680-235DD0BCB443.png' alt='' />
 
-<img src='關於我/3DD5D4F0-3B69-47A5-AB10-3BD05E9ED1BE.png' alt='' />
+<img src='3DD5D4F0-3B69-47A5-AB10-3BD05E9ED1BE.png' alt='' />
 </section>
 </body></html>
