--- a/index.html
+++ b/index.html
@@ -45,12 +45,43 @@ window.onload = () => showSection('作品');
 </section>
 <section id='好用的東東'><h2>好用的東東</h2>
 
-<img src='好用的東東/B436827A-6053-47F3-9700-79C28C22149D.gif' alt='' />
-</section>
-<section id='關於我'><h2>關於我</h2>
+<img src='B436827A-6053-47F3-9700-79C28C22149D.gif' alt='' />
+<header>
+    <h2>隨便想想的創作</h2>
+    <p>歡迎來到我的個人作品集網站</p>
+  </header>
 
-<img src='BB2467CF-0FC3-488C-A680-235DD0BCB443.png' alt='' />
+  <section id="about" style="color: #ff7043;">
+    <h3>關於我</h3>
+    <p>我叫 Dennis Lee，以前有人叫我小李，但現在可叫我老李。</p>
+    <p>我是工科學校畢業，沒有什麼專長，就想嘗試的事情就去嘗試。興趣特多，例如打籃球、游泳、慢跑、爬山等等。</p>
+    <h3>有任何想法想告訴我？</h3>
+    <p>Email: <a href="mailto:dennis3333308@gmail.com">dennis3333308@gmail.com</a></p>
+    <p>Facebook: <a href="https://www.facebook.com/dennis.lee199" target="_blank">點我看 Facebook</a></p>
+    <p>LINE 貼圖：<a href="https://line.me/S/sticker/30662937/?lang=zh-Hant&utm_source=gnsh_stickerDetail" target="_blank">摩尾｜摩塔星上的外星生物（職場篇）</a></p>
 
-<img src='3DD5D4F0-3B69-47A5-AB10-3BD05E9ED1BE.png' alt='' />
-</section>
-</body></html>
+    <article class="item">
+      <header>
+          <h3 style="color: #ff7043;">摩尾誕生於手術台</h3>
+      </header>
+      <a href="BB2467CF-0FC3-488C-A680-235DD0BCB443.png" class="image fit">
+          <img src="BB2467CF-0FC3-488C-A680-235DD0BCB443.png" alt="摩尾誕生於手術台" style="width:25%; max-width:100%; height:auto;" />
+      </a>
+    </article>
+    <article class="item">
+      <header>
+          <h3 style="color: #ff7043;">摩尾故事即將展開</h3>
+      </header>
+      <a href="3DD5D4F0-3B69-47A5-AB10-3BD05E9ED1BE.png" class="image fit">
+          <img src="3DD5D4F0-3B69-47A5-AB10-3BD05E9ED1BE.png" alt="摩尾故事即將展開" style="width:25%; max-width:100%; height:auto;" />
+      </a>
+    </article>
+  </section>
+
+  <footer>
+    © Dennis_Lee 2025 丹尼斯李
+  </footer>
+
+</body>
+</html>
+
