--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@ window.onload = () => showSection('作品');
 <nav>
 <a href='#' onclick="showSection('作品')">作品</a>
 <a href='#' onclick="showSection('動畫作品')">動畫作品</a>
-<a href='#' onclick="showSection('好吃的東東')">好吃的東東</a>
-<a href='#' onclick="showSection('好用的東東')">好用的東東</a>
+<a href='#' onclick="showSection('好吃的東東')">建構中.....</a>
+<a href='#' onclick="showSection('好用的東東')">建構中.....</a>
 <a href='#' onclick="showSection('關於我')">關於我</a>
 </nav>
 <section id='作品'><h2>作品</h2>
@@ -39,17 +39,29 @@ window.onload = () => showSection('作品');
 <h3>老人笑的動畫</h3>
 <img src='253D49FF-22D4-4FAE-BF42-C63726795228.gif' alt='老人笑的動畫' />
 </section>
+
+<header>
+    <h2>隨便想想的創作</h2>
+    <p>歡迎來到我的個人作品集網站</p>
+</header>
+
 <section id='好吃的東東'><h2>好吃的東東</h2>
 
 <img src='F8FB669A-B340-4FA7-9BFE-DD8737AB48AA.gif' alt='' />
 </section>
-<section id='好用的東東'><h2>好用的東東</h2>
-
-<img src='B436827A-6053-47F3-9700-79C28C22149D.gif' alt='' />
 <header>
     <h2>隨便想想的創作</h2>
     <p>歡迎來到我的個人作品集網站</p>
-  </header>
+</header>
+
+<section id='好用的東東'><h2>好用的東東</h2>
+
+<img src='B436827A-6053-47F3-9700-79C28C22149D.gif' alt='' />
+</section>
+<header>
+    <h2>隨便想想的創作</h2>
+    <p>歡迎來到我的個人作品集網站</p>
+</header>
 
   <section id="about" style="color: #ff7043;">
     <h3>關於我</h3>
