--- a/index.html
+++ b/index.html
@@ -1,92 +1,136 @@
+
 <!DOCTYPE html>
-<html lang='zh-Hant'>
-<head><meta charset='UTF-8'><meta name='viewport' content='width=device-width, initial-scale=1.0'>
-<title>摩尾的作品集</title>
-<style>
-body { font-family: sans-serif; background: #fffaf5; color: #333; text-align: center; }
-nav a { margin: 0 15px; color: #f94d00; text-decoration: none; font-weight: bold; }
-section { padding: 50px 20px; display: none; }
-section.active { display: block; }
-img { max-width: 300px; margin: 20px auto; display: block; }
-h3 { margin-bottom: 0; }
-</style>
-<script>
-function showSection(id) {
-  document.querySelectorAll('section').forEach(sec => sec.classList.remove('active'));
-  document.getElementById(id).classList.add('active');
-}
-window.onload = () => showSection('作品');
-</script>
-</head><body>
-<nav>
-<a href='#' onclick="showSection('作品')">作品</a>
-<a href='#' onclick="showSection('動畫作品')">動畫作品</a>
-<a href='#' onclick="showSection('好吃的東東')">建構中.....</a>
-<a href='#' onclick="showSection('好用的東東')">建構中.....</a>
-<a href='#' onclick="showSection('關於我')">關於我</a>
-</nav>
-<section id='作品'><h2>作品</h2>
+<html lang="zh-Hant">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>丹尼斯李 | 隨便想想的創作</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: "Helvetica Neue", sans-serif;
+      background-color: #fff5f0;
+      color: #333;
+    }
+    nav {
+      background-color: rgba(255, 112, 67, 0.9);
+      padding: 1rem 2rem;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      flex-wrap: wrap;
+    }
+    nav h1 {
+      color: white;
+      font-size: 1.5rem;
+      margin: 0;
+    }
+    nav ul {
+      list-style: none;
+      display: flex;
+      gap: 1.5rem;
+      margin: 0;
+      padding: 0;
+    }
+    nav ul li a {
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+      cursor: pointer;
+    }
+    header {
+      text-align: center;
+      padding: 2rem;
+    }
+    section {
+      padding: 2rem;
+      max-width: 960px;
+      margin: auto;
+      display: none;
+    }
+    section.active {
+      display: block !important;
+    }
+    .centered {
+      text-align: center;
+    }
+    .centered img {
+      max-width: 300px;
+      margin: 1rem;
+      display: inline-block;
+    }
+    footer {
+      text-align: center;
+      padding: 2rem;
+      background-color: #ffe0b2;
+      color: #555;
+    }
+  </style>
+  <script>
+    function showSection(id) {
+      const sections = document.querySelectorAll('section');
+      sections.forEach(section => section.classList.remove('active'));
+      document.getElementById(id).classList.add('active');
+    }
+    window.onload = () => showSection('works');
+  </script>
+</head>
+<body>
 
-<img src='0859D848-951C-4C71-8061-CE970B3D27C6.png' alt='' />
+  <nav>
+    <h1>丹尼斯李</h1>
+    <ul>
+      <li><a onclick="showSection('works')">作品</a></li>
+      <li><a onclick="showSection('animation')">動畫作品</a></li>
+      <li><a onclick="showSection('food')">好吃的東東</a></li>
+      <li><a onclick="showSection('tools')">好用的東東</a></li>
+      <li><a onclick="showSection('about')">關於我與聯絡</a></li>
+    </ul>
+  </nav>
 
-<img src='C3F65532-F14A-4A23-8259-E8857B0C3CD6.png' alt='' />
+  <section id="works" class="centered active">
+    <h3>我的作品</h3>
+    <img src="0859D848-951C-4C71-8061-CE970B3D27C6.png" alt="作品圖1" />
+    <img src="C3F65532-F14A-4A23-8259-E8857B0C3CD6.png" alt="作品圖2" />
+  </section>
 
-<img src='450A4330-613F-47EB-A01B-406085EEF684.png' alt='' />
-</section>
-<section id='動畫作品'><h2>動畫作品</h2>
-<h3>弓箭動畫</h3>
-<img src='BD1B05F1-5A78-4018-A662-1110862684D5.gif' alt='弓箭動畫' />
-<h3>老人笑的動畫</h3>
-<img src='253D49FF-22D4-4FAE-BF42-C63726795228.gif' alt='老人笑的動畫' />
-</section>
+  <section id="animation" class="centered">
+    <h3>動畫作品</h3>
+    <img src="BD1B05F1-5A78-4018-A662-1110862684D5.gif" alt="動畫圖1" />
+    <img src="253D49FF-22D4-4FAE-BF42-C63726795228.gif" alt="動畫圖2" />
+  </section>
 
-<header>
-    <h2>隨便想想的創作</h2>
-    <p>歡迎來到我的個人作品集網站</p>
-</header>
+  <section id="food" class="centered">
+    <h3>好吃的東東</h3>
+    <img src='F8FB669A-B340-4FA7-9BFE-DD8737AB48AA.gif' alt='建構中圖1' /><p>建構中…敬請期待！</p>
+  </section>
 
-<section id='好吃的東東'><h2>好吃的東東</h2>
+  <section id="tools" class="centered">
+    <h3>好用的東東</h3>
+    <img src='B436827A-6053-47F3-9700-79C28C22149D.gif' alt='建構中圖2' /><p>建構中…敬請期待！</p>
+  </section>
 
-<img src='F8FB669A-B340-4FA7-9BFE-DD8737AB48AA.gif' alt='' />
-</section>
-<header>
-    <h2>隨便想想的創作</h2>
-    <p>歡迎來到我的個人作品集網站</p>
-</header>
-
-<section id='好用的東東'><h2>好用的東東</h2>
-
-<img src='B436827A-6053-47F3-9700-79C28C22149D.gif' alt='' />
-</section>
-<header>
-    <h2>隨便想想的創作</h2>
-    <p>歡迎來到我的個人作品集網站</p>
-</header>
-
-  <section id="about" style="color: #ff7043;">
+  <section id="about" class="centered">
     <h3>關於我</h3>
-    <p>我叫 Dennis Lee，以前有人叫我小李，但現在可叫我老李。</p>
-    <p>我是工科學校畢業，沒有什麼專長，就想嘗試的事情就去嘗試。興趣特多，例如打籃球、游泳、慢跑、爬山等等。</p>
-    <h3>有任何想法想告訴我？</h3>
     <p>Email: <a href="mailto:dennis3333308@gmail.com">dennis3333308@gmail.com</a></p>
     <p>Facebook: <a href="https://www.facebook.com/dennis.lee199" target="_blank">點我看 Facebook</a></p>
     <p>LINE 貼圖：<a href="https://line.me/S/sticker/30662937/?lang=zh-Hant&utm_source=gnsh_stickerDetail" target="_blank">摩尾｜摩塔星上的外星生物（職場篇）</a></p>
+    <article class="item">
+    <header>
+    <h3 style="color: #ff7043;">摩尾誕生於手術台</h3>
+    </header>
+    <a class="image fit" href="BB2467CF-0FC3-488C-A680-235DD0BCB443.png">
+    <img alt="摩尾誕生於手術台" src="BB2467CF-0FC3-488C-A680-235DD0BCB443.png" style="width:50%; max-width:100%; height:auto;"/>
+    </a>
+    </article>
 
     <article class="item">
-      <header>
-          <h3 style="color: #ff7043;">摩尾誕生於手術台</h3>
-      </header>
-      <a href="BB2467CF-0FC3-488C-A680-235DD0BCB443.png" class="image fit">
-          <img src="BB2467CF-0FC3-488C-A680-235DD0BCB443.png" alt="摩尾誕生於手術台" style="width:25%; max-width:100%; height:auto;" />
-      </a>
-    </article>
-    <article class="item">
-      <header>
-          <h3 style="color: #ff7043;">摩尾故事即將展開</h3>
-      </header>
-      <a href="3DD5D4F0-3B69-47A5-AB10-3BD05E9ED1BE.png" class="image fit">
-          <img src="3DD5D4F0-3B69-47A5-AB10-3BD05E9ED1BE.png" alt="摩尾故事即將展開" style="width:25%; max-width:100%; height:auto;" />
-      </a>
+    <header>
+    <h3 style="color: #ff7043;">摩尾的故事即將展開</h3>
+    </header>
+    <a class="image fit" href="3DD5D4F0-3B69-47A5-AB10-3BD05E9ED1BE.png">
+    <img alt="摩尾的故事即將展開" src="3DD5D4F0-3B69-47A5-AB10-3BD05E9ED1BE.png" style="width:50%; max-width:100%; height:auto;"/>
+    </a>
     </article>
   </section>
 
@@ -96,4 +140,3 @@ window.onload = () => showSection('作品');
 
 </body>
 </html>
-
